src/global.css
@import "tailwindcss";
@import "@fontsource/jetbrains-mono/latin.css";
@import "@fontsource/jetbrains-mono/latin-italic.css";

@theme {
    --color-brand: #17a71b;
    --color-foreground-dimmed: var(--color-neutral-400);
    --color-foreground: var(--color-neutral-300);
    --color-foreground-bright: var(--color-neutral-100);
    --color-social-discord: #5865F2;
    --font-mono: 'JetBrains Mono', monospace;
}
@layer base {
    html {
        scroll-behavior: smooth;
        color: var(--color-foreground);
        font-family: var(--font-mono);
        font-weight: var(--font-weight-light);
    }
    a {
        text-decoration: underline;
        color: var(--color-foreground-dimmed);
    }
    button {
        cursor: pointer;
    }
    code {
        font-variant-ligatures: none;
    }
    h1, h2 {
        color: var(--color-foreground-bright);
    }
    @variant dark {
        p, li {
            color: var(--color-foreground);
        }
    }
    ul {
        display: block;
        list-style-type: disc;
        @apply pl-8;
    }
    ul ul {
        list-style-type: circle;
    }
    ol {
        display: block;
        list-style-type: decimal;
        @apply pl-8;
    }
    li {
        padding-inline-start: 0.25rem;
        @apply mt-2;
    }

    strong, b {
        font-weight: bold;
    }
    strong {
        color: var(--color-foreground-bright);
    }
    [id] {
        @apply scroll-mt-24 md:scroll-mt-32 lg:scroll-mt-2;
    }

    :not(pre) > code {
        @apply py-[0.5] px-1 bg-neutral-900 rounded-sm;
    }

    td, th {
        @apply px-2 py-1;
    }

    th {
        @apply border-b-2 border-b-foreground;
    }

    blockquote, blockquote * {
        color: var(--color-foreground-dimmed);
        font-style: italic;
        font-weight: 500;
    }
    blockquote {
        @apply ml-8 ps-6 border-l-4 border-b-foreground-dimmed;
    }

    .blog-post {
        a:visited {
            color: var(--color-purple-200);
        }
        img {
            @apply max-h-120 max-w-full my-12;
            object-fit: contain;
        }
        pre {
            @apply ml-8 p-2;
        }
        h1 {
            @apply text-3xl mb-4;
            font-weight: 800;
        }
        h2 {
            @apply text-3xl mb-2 mt-4;
            font-weight: 700;
        }
        h3 {
            @apply text-2xl mb-2 mt-4;
            font-weight: 500;
        }
        h4, h5, h6 {
            @apply text-xl my-2;
            font-weight: 600;
        }
        p {
            @apply my-3;
        }

        .contents {
            p, li, td {
                font-family: var(--font-sans);
                font-weight: normal;
            }
        }

        .toc ol {
            list-style: disc;
        }
        .toc ol ol {
            list-style: circle;
        }
        .toc a {
            color: var(--color-foreground-dimmed);
        }
    }
}

/*noinspection CssOverwrittenProperties*/
@utility text-from-* {
    --from-color: --value(--color-*);
    --from-color: --value([color]);
}

/*noinspection CssOverwrittenProperties*/
@utility text-to-* {
    --to-color: --value(--color-*);
    --to-color: --value([color]);
}

@keyframes gradient-link-hover {
    0% { background-position-x: right; }
    100% { background-position-x: left; }
}

@keyframes gradient-link-icon-hover {
    0% { color: var(--from-color); }
    50% { color: var(--to-color); }
    100% { color: var(--from-color); }
}

@utility icon-text {
    display: inline-flex;
    flex-direction: row;
    @apply gap-3;
    box-sizing: border-box;
    align-items: center;
    svg {
        @apply min-h-4 min-w-4;
    }
}

@utility hide-scrollbar {
    ::-webkit-scrollbar {
        display: none;
    }
    -ms-overflow-style: none;
    scrollbar-width: none;
}

@keyframes accordionSlideDown {
	from {
		height: 0;
	}
	to {
		height: var(--radix-accordion-content-height);
	}
}

@keyframes accordionSlideUp {
	from {
		height: var(--radix-accordion-content-height);
	}
	to {
		height: 0;
	}
}

@layer components {
    .accordion {
        @apply rounded-2xl border-foreground-dimmed bg-neutral-900;
        width: 100%;
    }
    .accordion-header {
        font-weight: 400;
        color: var(--color-foreground-bright);
        display: flex;
        width: 100%;
    }
    .accordion-item {
        position: relative;
        &:hover {
            @apply bg-neutral-950;
        }
        * {
            text-align: start;
        }
        button {
            @apply pl-4;
            outline: none;
        }
        &:not(:last-child) {
            @apply border-b-2 border-neutral-700;
        }
        &:first-child, &:first-child button {
            @apply rounded-t-2xl;
        }
        &:last-child, &:last-child button {
            @apply rounded-b-2xl;
        }
        button:focus-visible {
            @apply outline-2 outline-neutral-400;
        }
    }
    .accordion-content {
        overflow: clip;

        &[data-state="open"] {
            animation: accordionSlideDown 200ms ease-in;
        }
        & > :first-child {
            @apply p-4 pt-0;
        }
    }
    .accordion-content[data-state="closed"] {
        animation: accordionSlideUp 200ms ease-in;
    }
    .accordion-trigger {
        @apply p-4 icon-text;
        display: flex;
        align-items: start;
        cursor:auto;
        flex-direction: row;
        width: 100%;
        justify-content: space-between;
        .accordion-icon {
            transition: transform 200ms ease-in-out;
        }
        &[data-state="open"] .accordion-icon {
            transform: rotate(180deg);
        }
    }
    .nav-link {
        display: flex;
        @apply gap-2;
        text-decoration: none;
        transition: color 75ms ease-in;
        align-items: center;
    }
    .nav-link:visited {
        color: var(--color-foreground-dimmed);
    }
    .nav-link.active {
        font-weight: bold;
        color: white;
        font-style: italic;
    }

    .btn {
        @apply icon-text rounded-full py-3 sm:py-2 px-4;
        border-color: var(--color-foreground);
        color: var(--color-foreground);
        text-decoration: none;
    }

    .gradient-text {
        background-image: linear-gradient(to right, var(--from-color) 0%, var(--to-color) 33%, var(--from-color) 67%, var(--to-color) 100%);
        background-clip: text;
        color: transparent;
        background-size: 300% 100%;
        background-position-x: right;
    }

    a.gradient-text:hover {
        animation: gradient-link-hover 1s infinite linear;
    }
    .gradient-text svg {
        color: var(--from-color);
    }
    a.gradient-text:hover svg {
        animation: gradient-link-icon-hover 1s infinite linear;
    }

    details {
        @apply mb-4;
    }
    summary {
        @apply pb-1 mb-2;
        cursor: pointer;
        font-weight: 500;
        font-style: italic;
        color: var(--color-foreground);
        border-bottom: 2px solid var(--color-foreground);
    }
}

